--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
 </div>
 
 <script>
-    // Dados do jogo: estrutura expandida para uma jornada mais longa
-    // Adicionado mais pontos em certas escolhas para garantir que os requisitos sejam atingidos
+    // Dados do jogo
     const gameData = {
         'start': {
             narrative: "Você acorda sob a luz pálida da lua, no coração do Bosque Murmurante. Uma voz suave, mas persistente, ecoa em sua mente: 'Busque o Coração do Bosque. Só ele pode silenciar os lamentos desta terra'. Uma trilha se divide à sua frente. Para onde você vai?",
@@ -155,7 +154,7 @@
         'path_of_light': {
             narrative: "O caminho da luz leva você a uma clareira onde uma criatura de cristal, ferida, chora. Seus cristais tremem, emitindo uma melodia dolorosa.",
             choices: [
-                { text: "Tente curar a criatura com um toque gentil.", next: 'heal_creature', virtues: { compassion: 3, wisdom: 2 } }, // Aumentado para 3 e 2 para alcançar o requisito de 2 de sabedoria.
+                { text: "Tente curar a criatura com um toque gentil.", next: 'heal_creature', virtues: { compassion: 3, wisdom: 2 } },
                 { text: "Quebre um dos cristais para analisar a sua luz.", next: 'break_crystal', vices: { cruelty: 3, futility: 1 } },
                 { text: "Ignore a criatura e procure um atalho, não há tempo para desvios.", next: 'ignore_creature', vices: { futility: 3 } }
             ]
@@ -163,16 +162,15 @@
         'path_of_shadow': {
             narrative: "O caminho da sombra o leva a um abismo. Uma ponte de pedra, coberta de runas, estende-se sobre o vazio. No centro, uma gárgula de pedra murmura enigmas.",
             choices: [
-                { text: "Tente decifrar as runas e o enigma da gárgula.", next: 'solve_enigma', virtues: { wisdom: 3 } }, // Aumentado para 3
-                { text: "Tente pular o abismo com um salto ousado.", next: 'jump_abyss', virtues: { courage: 3 } }, // Aumentado para 3
-                { text: "Ofereça algo de valor à gárgula em troca de passagem.", next: 'bribe_gargoyle', vices: { ambition: 2 } } // Aumentado para 2
+                { text: "Tente decifrar as runas e o enigma da gárgula.", next: 'solve_enigma', virtues: { wisdom: 3 } },
+                { text: "Tente pular o abismo com um salto ousado.", next: 'jump_abyss', virtues: { courage: 3 } },
+                { text: "Ofereça algo de valor à gárgula em troca de passagem.", next: 'bribe_gargoyle', vices: { ambition: 2 } }
             ]
         },
         'heal_creature': {
             narrative: "Sua compaixão cura a criatura. Ela, em gratidão, revela que a próxima etapa da sua jornada está em um pântano e lhe entrega uma flor luminosa que repele as criaturas das trevas. Você continua sua jornada.",
             choices: [
                 { text: "Continue sua jornada para o pântano.", next: 'swamp_journey', virtues: { compassion: 1 } },
-                // Agora o jogador terá 2 pontos de sabedoria e poderá escolher esta opção.
                 { text: "Analise a criatura para aprender sua linguagem.", next: 'learn_language', virtues: { wisdom: 3, compassion: 1 }, required: { wisdom: 2 } }
             ]
         },
@@ -203,7 +201,6 @@
         'jump_abyss': {
             narrative: "Você decide saltar o abismo. Sua coragem é posta à prova.",
             choices: [
-                // Com o ganho de 3 no início, o jogador terá 3 de coragem e poderá fazer esta escolha.
                 { text: "Continue com o seu salto.", next: 'success_jump', virtues: { courage: 2 }, required: { courage: 3 } },
                 { text: "Desistir e retornar para a ponte.", next: 'fail_jump', vices: { futility: 2 } }
             ]
@@ -223,7 +220,6 @@
         'bribe_gargoyle': {
             narrative: "Você oferece um objeto de valor à gárgula. Ela examina o item com interesse. Sua ambição é posta à prova.",
             choices: [
-                // O jogador terá 2 pontos de ambição e poderá fazer esta escolha.
                 { text: "Ofereça mais itens de valor para a gárgula.", next: 'bribe_success', vices: { ambition: 3 }, required: { ambition: 2 } },
                 { text: "O objeto não é suficiente. Deixe-a e retorne para a trilha principal.", next: 'bribe_fail' }
             ]
@@ -249,7 +245,6 @@
         'swamp_journey_advanced': {
             narrative: "O pântano é um labirinto, mas a sua nova compreensão do bosque te guia. Você encontra uma antiga árvore sábia, que te oferece um último teste de sabedoria.",
             choices: [
-                // Aumentado os requisitos e os ganhos para que este caminho seja mais desafiador e gratificante.
                 { text: "Tente responder a um enigma.", next: 'riddle_of_the_ancient_tree', virtues: { wisdom: 3 }, required: { wisdom: 3 } },
                 { text: "Desvie-se da árvore para economizar tempo.", next: 'skip_the_riddle', vices: { futility: 1 } }
             ]
@@ -357,12 +352,15 @@
     const restartBtn = document.getElementById('restart-btn');
 
     // Funções do Jogo
-    // AQUI ESTÁ A CORREÇÃO: A lógica para encontrar e atualizar as barras foi refinada
-    // para garantir que a largura seja sempre calculada e aplicada corretamente.
+    // AQUI ESTÁ A CORREÇÃO PRINCIPAL: O laço de repetição foi ajustado para encontrar
+    // os IDs corretos das barras de progresso no HTML. O erro estava na diferença entre
+    // o nome da variável no plural e o ID no singular.
     function updateStatsUI() {
         for (const statType in stats) {
+            // Usa o prefixo 'virtue' ou 'vice' para corresponder ao HTML
+            const prefix = statType.slice(0, -1);
             for (const statName in stats[statType]) {
-                const bar = document.getElementById(`${statType}-${statName}-bar`);
+                const bar = document.getElementById(`${prefix}-${statName}-bar`);
                 if (bar) {
                     const percentage = (stats[statType][statName] / STAT_MAX) * 100;
                     bar.style.width = `${Math.min(percentage, 100)}%`;
@@ -386,7 +384,6 @@
         narrativeTextEl.textContent = node.narrative;
         choicesContainerEl.innerHTML = '';
 
-        // Filtra e exibe as escolhas baseadas nos requisitos de status
         node.choices.forEach(choice => {
             let canTakeChoice = true;
             let requiredStatsText = "";
@@ -396,11 +393,10 @@
                 requiredStatsText = requiredStatEntries.map(([key, value]) => `[Requer ${key.charAt(0).toUpperCase() + key.slice(1)}: ${value}]`).join(' ');
                 
                 for (const [stat, value] of requiredStatEntries) {
-                    // Verifica se o stat é uma virtude ou um vício para pegar o valor correto
                     const currentStatValue = stats.virtues[stat] !== undefined ? stats.virtues[stat] : stats.vices[stat];
                     if (currentStatValue < value) {
                         canTakeChoice = false;
-                        break; // Se um requisito não é atendido, não há necessidade de continuar
+                        break;
                     }
                 }
             }
@@ -422,6 +418,7 @@
             choicesContainerEl.appendChild(button);
         });
 
+        // Esta chamada garante que o UI é atualizado após cada nó ser exibido.
         updateStatsUI();
     }
 
